templatetag loading only comes after an 'extends' directive

--- a/src/apollo/core/templates/core/checklist_summary.html
+++ b/src/apollo/core/templates/core/checklist_summary.html
@@ -1,4 +1,4 @@
-{% load i18n %}{% extends "core/layout.html" %}
+{% extends "core/layout.html" %}{% load i18n %}
 {% load apollo %}{% load analysis %}
 {% block content %}
 <div class="row">
