bug fix for translated string

--- a/src/apollo/core/templates/core/critical_incidents_summary.html
+++ b/src/apollo/core/templates/core/critical_incidents_summary.html
@@ -24,7 +24,7 @@
   	<div class="span7">
         <form class="form-horizontal pull-right" action="" method="get" accept-charset="utf-8">
           {{ filter_form.status }} {{ filter_form.witness }} {{ filter_form.sample }}
-          <button class="btn btn-warning" type="submit"><i class="icon-search icon-white"></i> {% trans "Filter" context "verb"}</button>
+          <button class="btn btn-warning" type="submit"><i class="icon-search icon-white"></i> {% trans "Filter" context "verb" %}</button>
         </form>
   	</div>
     <div class="span12">
