--- a/src/apollo/core/templates/core/critical_incidents_summary.html
+++ b/src/apollo/core/templates/core/critical_incidents_summary.html
@@ -1,11 +1,9 @@
 {% extends "core/layout.html" %}
-{% load apollo %}{% load i18n %}
+{% load apollo %}{% load i18n %}{% load compressed %}
 {% block javascripts %}
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
-<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.csv.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.js"></script>
-<script type="text/javascript" src="{{ STATIC_URL }}js/kartograph.js"></script>
+{{ block.super }}
+<script type="text/javascript" src="{{ STATIC_URL }}js/protovis.min.js"></script>
+{% compressed_js 'graphs' %}
 <script type="text/javascript">
 	$(function(){
 	  	loadProv();
@@ -38,10 +36,12 @@
 			<ul class="nav nav-tabs">
 				<li class="active"><a href="#table" data-toggle="tab">{% trans "Table" %}</a></li>
 				<li><a href="#charts" data-toggle="tab">{% trans "Charts" %}</a></li>
+				<!--
 				<li><a href="#province_map" data-toggle="tab" data-map="map">Province</a></li>
 				<li><a href="#con_map" data-toggle="tab" data-map="map1">Constituency</a></li>
 				<li><a href="#bula_map" data-toggle="tab" data-map="map2">Bulawayo</a></li>
 				<li><a href="#hara_map" data-toggle="tab" data-map="map3">Harare</a></li>
+				-->
 			</ul>
 			<div class="tab-content">
 			    <div class="tab-pane active" id="table">
