--- a/src/apollo/core/templates/core/map_embed.html
+++ b/src/apollo/core/templates/core/map_embed.html
@@ -1,16 +1,9 @@
-{% load apollo %}
+{% load apollo %}{% load compressed %}
 <html>
 <head>
-	<link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet">
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.css">
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/kartograph.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.csv.js"></script>
-
+	{% compressed_css 'apollo' %}
+	{% compressed_js 'apollo' %}
+	{% compressed_js 'graphs' %}
 	<script type="text/javascript">
 		$(function(){
 		});
