--- a/src/apollo/core/templates/core/dashboard.html
+++ b/src/apollo/core/templates/core/dashboard.html
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="span12">
       <div class="well" style="padding-bottom:0">
-          <form action="" method="post" accept-charset="utf-8" id="filter">
+          <form action="" method="post" accept-charset="utf-8" id="filter" style="margin: 0 0 8px;">
               {% csrf_token %}
               <div class="controls controls-row">
                 {% if perms.core.view_activities %}{{ filter_form.activity }}{% endif %}
