more modification to language selection tool

--- a/src/apollo/azerbaijan/templates/core/layout.html
+++ b/src/apollo/azerbaijan/templates/core/layout.html
@@ -34,8 +34,8 @@
         <div class="btn-group">
           <a class="btn btn-default btn-mini dropdown-toggle" data-toggle="dropdown" href="#">{% trans "Language" %} <span class="caret"></span></a>
           <ul class="dropdown-menu pull-right">
-              <a href="#" rel="nofollow"><img src="{{ STATIC_URL }}img/az.gif"> {% trans "English" %}</a>
-              <a href="#" rel="nofollow"><img src="{{ STATIC_URL }}img/en.gif"> {% trans "Azerbaijani" %}</a>
+              <a href="#" rel="nofollow"><img src="{{ STATIC_URL }}img/az.gif"> {% trans "Azerbaijani" %}</a>
+              <a href="#" rel="nofollow"><img src="{{ STATIC_URL }}img/en.gif"> {% trans "English" %}</a>
           </ul>
         </div>
       </div>
