--- a/src/apollo/azerbaijan/templates/core/layout.html
+++ b/src/apollo/azerbaijan/templates/core/layout.html
@@ -27,16 +27,27 @@
    .dropdown-menu li > a:hover,
 .dropdown-menu li > a:focus,
 .dropdown-submenu:hover > a {background:#BC3F17;}
+.dropdown-menu .active > a,
+.dropdown-menu .active > a:hover {background:#BC3F17;}
+.nav-list > .active > a,
+.nav-list > .active > a:hover {
+  color: #ffffff;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
+  background-color: #BC3F17;
+}
+.control-group.info input:focus,
+.control-group.info select:focus,
+.control-group.info textarea:focus {background-color: #BC3F17;}
   </style>
   <body>
     <div class="navbar-inner1">
       <div class="pull-right" style="cursor:pointer">
         <div class="btn-group">
           <a class="btn btn-default btn-mini dropdown-toggle" data-toggle="dropdown" href="#">{% trans "Language" %} <span class="caret"></span></a>
-          <ul class="dropdown-menu pull-right">
-              <a href="#" rel="nofollow"><img src="{{ STATIC_URL }}img/az.gif"> {% trans "Azerbaijani" %}</a>
-              <a href="#" rel="nofollow"><img src="{{ STATIC_URL }}img/en.gif"> {% trans "English" %}</a>
-          </ul>
+            <ul class="dropdown-menu pull-right">
+              <li><a href="#">{% trans "Azerbaijani" %}</a></li>
+              <li><a href="#">{% trans "English" %}</a></li>
+            </ul>
         </div>
       </div>
     </div>
