--- a/src/apollo/core/templates/500.html
+++ b/src/apollo/core/templates/500.html
@@ -1,23 +1,14 @@
-{% load apollo %}{% load i18n %}
+{% load apollo %}{% load i18n %}{% load compressed %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <title>{% trans "Server Error" %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content=""><link href="/assets/css/bootstrap.css" rel="stylesheet">
-    <link href="/assets/css/bootstrap-responsive.css" rel="stylesheet">
+    {% compressed_css 'apollo' %}
     <link rel="shortcut icon" href="/assets/ico/favicon.ico">
   </head>
  <body>
-    <div class="navbar navbar-static-top">
-        <div class="navbar-inner">
-          <div class="container">
-            <a class="brand" href="{% url dashboard %}"></a>
-          </div>
-        </div>
-      </div>
     <div class="row-fluid">
 		<div class="span4 offset4" style="text-align:center; margin-top:14em;">
 			<legend style="border-bottom:0px; margin-bottom:0px;">{% trans "Zong! We screwed up" %} :(</legend>
