--- a/src/apollo/core/templates/core/submission_header.html
+++ b/src/apollo/core/templates/core/submission_header.html
@@ -15,6 +15,6 @@
     {% endfor %}
     <th style="text-align:center"><abbr title="{% trans "Status" %}"><i class="icon-eye-open"></i></abbr></th>
     {% endif %}
-    <th style="text-align:center"><abbr title="{% trans "Phone Verification" %}"><i class="icon-signal"></i></abbr></th>
+    <th style="text-align:center"><abbr title="{% trans "Phone Verification" %}"><i class="icon-question-sign"></i></abbr></th>
     {% if perms.core.change_submission %}<th style="text-align:center">{% trans "Edit" %}</th>{% endif %}
 </tr>
