--- a/src/apollo/anambra/static/css/custom.css
+++ b/src/apollo/anambra/static/css/custom.css
@@ -1,3 +1,32 @@
+.btn-danger {
+background-color: #79325d;
+background-image: -moz-linear-gradient(top, #894b71, #610d3e);
+background-image: -ms-linear-gradient(top, #894b71, #610d3e);
+background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#894b71), to(#610d3e));
+background-image: -webkit-linear-gradient(top, #894b71, #610d3e);
+background-image: -o-linear-gradient(top, #894b71, #610d3e);
+background-image: linear-gradient(top, #894b71, #610d3e);
+background-repeat: repeat-x;
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#894b71', endColorstr='#610d3e', GradientType=0);
+border-color: #610d3e #610d3e #1e0413;
+border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+}
+.btn-danger:hover {
+background-color: #610D3E;
+background-image: -moz-linear-gradient(top, #610D3E, #610d3e);
+background-image: -ms-linear-gradient(top, #610D3E, #610d3e);
+background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#610D3E), to(#610d3e));
+background-image: -webkit-linear-gradient(top, #610D3E, #610d3e);
+background-image: -o-linear-gradient(top, #610D3E, #610d3e);
+background-image: linear-gradient(top, #610D3E, #610d3e);
+background-repeat: repeat-x;
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#894b71', endColorstr='#610d3e', GradientType=0);
+border-color: #610d3e #610d3e #1e0413;
+border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+}
+
 .dropdown-menu li > a:hover,
 .dropdown-menu li > a:focus,
 .dropdown-submenu:hover > a {background:#BC3F17;}
@@ -15,7 +44,6 @@
 .navbar-inner{-webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
-  margin-left:54px; margin-right:53px; padding-bottom:2px;
 }
 .navbar-inner1 {
   min-height: 20px;
@@ -37,6 +65,7 @@
   *zoom: 1;
   border-top-right-radius: 6px; border-top-left-radius: 6px; border:none; margin-top:1px; margin-left:54px; margin-right:53px;
 }
+.navbar .nav > li > a{color: #610D3E;}
 .navbar-inner1:before,
 .navbar-inner1:after {
   display: table;
@@ -49,14 +78,14 @@
 .navbar_style{-webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.1), 0 1px 10px rgba(0, 0, 0, 0.1);
 -moz-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.1), 0 1px 10px rgba(0, 0, 0, 0.1);
 box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.1), 0 1px 10px rgba(0, 0, 0, 0.1);
-border:none; background:#ECECEC;
+border:none; background:;
 }
 .nav .dropdown-toggle .caret{border-top-color:#ffffff;}
      .nav .dropdown-toggle:hover .caret {
   border-top-color: #fff;
   border-bottom-color: #fff;
 }
-.h_style { border-top: 1px dashed #D3DAD9; border-bottom: 1px dashed #D3DAD9; font-weight: normal; padding-top:.5em; padding-bottom:.5em; padding-left:1em; }
+.h_style {font-family: 'Antonio-Regular';font-weight: normal; padding-top:.5em; padding-bottom:.5em; padding-left:1em; }
 .con_style { padding-top:0px; padding-bottom:1em; }
 .options { display: block; margin-top: 0.5em; }
 .option { margin-right: 1em; }
