--- a/src/apollo/anambra/templates/core/layout.html
+++ b/src/apollo/anambra/templates/core/layout.html
@@ -30,32 +30,30 @@
     {% block head %}{% endblock %}
   </head>
    <style type="text/css">
-    .nav .dropdown-toggle .caret{border-top-color:#ffffff;}
-     .nav .dropdown-toggle .caret:hover{border-top-color:#ffffff;}
+  /*  .nav .dropdown-toggle .caret{border-top-color:#ffffff;}
+     .nav .dropdown-toggle .caret:hover{border-top-color:#ffffff;}*/
   </style>
   <body>
-    <div class="navbar navbar-static-top">
-        <div class="navbar-inner">
-          <div class="container">
-            <a class="brand" href="#"><img src="{{ STATIC_URL }}img/logo.png">&nbsp ZESN &nbsp<span style="color: #E5E5E5;">|</span>&nbsp <span style="font-size: 15px; cursor:default; font-weight:bold;">Observer Information System<span></a>
-            <ul class="nav pull-right">
-              <li><a href="{% url dashboard %}"><i class="icon-home"></i> Dashboard</a></li>
-              {% forms_menu request perms %}
-              {% if perms.core.can_analyse %}{% analysis_menu request %}{% endif %}
-              {% if perms.core.view_observers %}<li><a href="{% url contacts_list %}"><i class="icon-user"></i> Observers</a></li>{% endif %}
-              {% if perms.messagelog.view_messages %}<li><a href="{% url messages_list %}"><i class="icon-envelope"></i> Messages</a></li>{% endif %}
-              <li>
-                <div class="btn-group">
-                  <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#"><i class="icon-user icon-white"></i> {{ request.user.username }} <span class="caret"></span></a>
-                  <ul class="dropdown-menu pull-right">
-                    <li><a href="{% url user-logout %}">Logout</a></li>
-                  </ul>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
+    <div class="navbar navbar-static-top navbar_style">
+      <div class="container">
+        <a class="brand" href="#"><img src="{{ STATIC_URL }}img/logo.png"><img src="{{ STATIC_URL }}img/motto.png"></a>
       </div>
+      <div class="container">
+        <ul class="nav pull-right">
+          <li><a href="{% url dashboard %}"><i class="icon-home"></i> Dashboard</a></li>
+          {% forms_menu request perms %}
+          {% if perms.core.can_analyse %}{% analysis_menu request %}{% endif %}
+          {% if perms.core.view_observers %}<li><a href="{% url contacts_list %}"><i class="icon-user"></i> Observers</a></li>{% endif %}
+          {% if perms.messagelog.view_messages %}<li><a href="{% url messages_list %}"><i class="icon-envelope"></i> Messages</a></li>{% endif %}
+          <li><div class="btn-group pull-right">
+          <a class="btn btn-danger dropdown-toggle" data-toggle="dropdown" href="#"> {{ request.user.username }} <span class="caret"></span></a>
+          <ul class="dropdown-menu pull-right">
+            <li><a href="{% url user-logout %}">Logout</a></li>
+          </ul>
+        </div></li>
+        </ul>
+      </div>
+    </div>
     <div class="container con_style">
       <h3 class="h_style">{% block title %}{{ page_title }}{% endblock %}{% activity_name request %}</h3>
     </div>
