--- a/src/apollo/anambra/static/css/custom.css
+++ b/src/apollo/anambra/static/css/custom.css
@@ -1,3 +1,6 @@
+.btn-group.open .btn-danger.dropdown-toggle {
+background-color: #610D3E;
+}
 .btn-danger {
 background-color: #79325d;
 background-image: -moz-linear-gradient(top, #894b71, #610d3e);
@@ -29,9 +32,9 @@ filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
 
 .dropdown-menu li > a:hover,
 .dropdown-menu li > a:focus,
-.dropdown-submenu:hover > a {background:#BC3F17;}
+.dropdown-submenu:hover > a {background:#662748;}
 .dropdown-menu .active > a,
-.dropdown-menu .active > a:hover {background:#BC3F17;}
+.dropdown-menu .active > a:hover {background:#662748;}
 .nav-list > .active > a,
 .nav-list > .active > a:hover {
   color: #ffffff;
