--- a/src/apollo/anambra/templates/core/layout.html
+++ b/src/apollo/anambra/templates/core/layout.html
@@ -1,4 +1,4 @@
-{% load apollo %}<!DOCTYPE html>
+{% load apollo %}{% load apollo %}{% load compressed %}<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -7,13 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Le styles -->
-    <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/select2.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/custom.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/table-fixed-header.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/datepicker.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.css">
+    {% compressed_css 'apollo' %}
     {% block stylesheets %}{% endblock %}
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -64,15 +58,7 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/select2.min.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-datepicker.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/table-fixed-header.js"></script>    
-    <script type="text/javascript" src="{{ STATIC_URL }}js/protovis.min.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/custom.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/highcharts.js"></script>
-    {% block javascripts %}{% endblock %}
+    {% compressed_js 'apollo' %}{% block javascripts %}{% endblock %}
 
     {% if not debug %}
     <script type="text/javascript">
