--- a/src/apollo/anambra/static/css/custom.css
+++ b/src/apollo/anambra/static/css/custom.css
@@ -43,31 +43,12 @@ filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
 }
 .navbar {padding: 0px;}
 .navbar .divider-vertical{margin: 0px; border-left: 1px solid gainsboro;}
-.navbar .brand{padding-left: 13px;padding-bottom:0px; padding-top:3px;}
+.navbar .brand{padding-top:3px;}
 .navbar-inner{-webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   border-radius: 0px;
 }
-.navbar-inner1 {
-  min-height: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  background-color: #b63a1b;
-  background-image: -moz-linear-gradient(top, #ce4213, #932d26);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ce4213), to(#932d26));
-  background-image: -webkit-linear-gradient(top, #ce4213, #932d26);
-  background-image: -o-linear-gradient(top, #ce4213, #932d26);
-  background-image: linear-gradient(to bottom, #ce4213, #932d26);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffce4213', endColorstr='#ff932d26', GradientType=0);
-  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
-  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
-  *zoom: 1;
-  border-top-right-radius: 6px; border-top-left-radius: 6px; border:none; margin-top:1px; margin-left:54px; margin-right:53px;
-}
+.navbar .nav{margin-bottom: .15em}
 .navbar .nav > li > a{color: #610D3E;}
 .navbar-inner1:before,
 .navbar-inner1:after {
@@ -88,7 +69,7 @@ border:none; background:;
   border-top-color: #fff;
   border-bottom-color: #fff;
 }
-.h_style {font-weight: normal; padding-top:.5em; padding-bottom:.5em; padding-left:1em; }
+.h_style {font-weight: normal;margin-top: .8em;}
 .con_style { padding-top:0px; padding-bottom:1em; }
 .options { display: block; margin-top: 0.5em; }
 .option { margin-right: 1em; }
