--- a/src/apollo/core/templates/core/dashboard.html
+++ b/src/apollo/core/templates/core/dashboard.html
@@ -21,11 +21,10 @@
       </div>
   </div>
 </div>
-<div class="row">
 {% for group in summary %}
-  {% if forloop.counter0|divisibleby:"5" %}<div class="span1"></div>{% endif %}
+{% if forloop.counter0|divisibleby:"5" %}<div class="row"><div class="span1"></div>{% endif %}
   <div class="span2">
-      <legend style="text-align:center"><a href="{% url grouped_dashboard group.id %}">{{ group.name }}</a></legend>
+    <legend style="text-align:center"><a href="{% url grouped_dashboard group.id %}">{{ group.name }}</a></legend>
     <div>
       <script type="text/javascript+protovis">
         width = 170,
@@ -77,14 +76,16 @@
       </script>
     </div>
   </div>
+{% if forloop.last or forloop.counter|divisibleby:"5" %}</div>{% endif %}
 {% empty %}
+<div class="row">
   <div class="span12">
-<table width="100%" class="table table-striped table-bordered">
-  <tr class="warning">
-    <td style="text-align:center">{% trans "No Data Available" %}</td>
-  </tr>
-</table>
+  <table width="100%" class="table table-striped table-bordered">
+    <tr class="warning">
+      <td style="text-align:center">{% trans "No Data Available" %}</td>
+    </tr>
+  </table>
   </div>
-{% endfor %}
 </div>
+{% endfor %}
 {% endblock %}
