took out sample filter from templates

--- a/src/apollo/core/templates/core/critical_incidents_summary.html
+++ b/src/apollo/core/templates/core/critical_incidents_summary.html
@@ -21,7 +21,7 @@
   	</div>
   	<div class="span7">
         <form class="form-horizontal pull-right" action="" method="get" accept-charset="utf-8">
-          {{ filter_form.status }} {{ filter_form.witness }} {{ filter_form.sample }}
+          {{ filter_form.status }} {{ filter_form.witness }}
           <button class="btn btn-warning" type="submit"><i class="icon-search icon-white"></i> {% trans "Filter" context "verb" %}</button>
         </form>
   	</div>
