put back sample filters that was taken out

--- a/src/apollo/core/templates/core/checklist_summary_breakdown.html
+++ b/src/apollo/core/templates/core/checklist_summary_breakdown.html
@@ -11,6 +11,7 @@
 	</div>
 	<div class="span3">
 		<form class="form-horizontal pull-right" action="" method="get" accept-charset="utf-8">
+        {{ filter_form.sample }}
           <button class="btn btn-warning" type="submit"><i class="icon-search icon-white"></i> {% trans "Filter" context "verb" %}</button>
         </form>
 	</div>
