--- a/src/apollo/core/templates/core/contact_list.html
+++ b/src/apollo/core/templates/core/contact_list.html
@@ -24,7 +24,8 @@
         <div class="controls controls-row">
           {{ filter_form.observer_id }}
           {{ filter_form.name }}
-          {{ filter_form.location }}      
+          {{ filter_form.location }} 
+          {{ filter_form.sample }}     
         </div>
         <div class="controls controls-row">
           {{ filter_form.role }}
