--- a/src/apollo/core/templates/core/dashboard.html
+++ b/src/apollo/core/templates/core/dashboard.html
@@ -11,6 +11,7 @@
               {% csrf_token %}
               <div class="controls controls-row">
                 {% if perms.core.view_activities %}{{ filter_form.activity }}{% endif %}
+                {{ filter_form.sample }}
                 {{ filter_form.form }}
                 {{ filter_form.location }}
                 <button class="btn btn-warning" style="margin-left:1em" type="submit"><i class="icon-search icon-white"></i> {% trans "Filter" context "verb" %}</button>
