fixed select filter that wasn't properly aligned

--- a/src/apollo/core/static/css/custom.css
+++ b/src/apollo/core/static/css/custom.css
@@ -9,7 +9,7 @@
 .submission-table .submission-field ul input[type="radio"], input[type="checkbox"] { margin: -2px 0 0 0;}
 .breadcrumb .locationtype { color: #DDD; }
 abbr[data-original-title] {cursor: help;border-bottom: 1px dotted #999999;}
-
+#id_group_26{margin-left: 0px;}
 /* override default img style */
 img {
   max-width: none;
