--- a/src/apollo/core/templates/core/dashboard_status_breakdown.html
+++ b/src/apollo/core/templates/core/dashboard_status_breakdown.html
@@ -22,7 +22,7 @@
   </div>
 </div>
     {% for location in summary %}
-    {% if forloop.counter0|divisibleby:"5" %}<div class="row"><div class="span1"></div>{% endif %}
+    {% if forloop.counter0|divisibleby:"6" %}<div class="row">{% endif %}
     	<div class="span2">
       	  <legend style="text-align:center;border:0">{{ location.name }}</legend>
           <script type="text/javascript+protovis">
@@ -74,6 +74,6 @@
             pie.render();
           </script>
         </div>
-        {% if forloop.counter|divisibleby:"5" %}</div>{% endif %}
+        {% if forloop.counter|divisibleby:"6" %}</div>{% endif %}
     {% endfor %}
 {% endblock %}
